--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ant-design/icons": "^5.3.0",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.1",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0"
   },
